fix(a11y): match better contrast ratio

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,7 @@
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 43.9%;
+    --muted-foreground: 0 0% 50.9%;
     --accent: 0 0% 15.9%;
     --accent-foreground: 0 0% 96%;
     --destructive: 0 62.8% 8.6%;
